[package]
name = "teef-ui"
version = "0.0.1"
description = "Tom's Enumeration and Exploitation Framework"
repository = "https://github.com/TDiblik/teef"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
edition = "2021"
publish = false

[profile.release]
opt-level = 3
strip = "symbols"
lto = true

[dependencies]
eframe = "0.22"
egui_dock = "0.6.3"
env_logger = "0.10.0"
