[package]
name = "teef-ui"
version = "0.0.1"
description = "Tom's Enumeration and Exploitation Framework"
repository = "https://github.com/TDiblik/teef"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
edition = "2021"
publish = false

[profile.release]
opt-level = 3
strip = "symbols"
lto = true

[dependencies]
eframe = "0.22.0"
egui_dock = "0.6.3"

log = "0.4.19"
log4rs = "1.2.0"

home = "0.5.5"
anyhow = "1.0.71"
chrono = "0.4.26"
uuid = { version ="1.4.0", features = ["v4", "fast-rng"] }
egui_extras = "0.22.0"
