[package]
name = "teef-ui"
version = "0.0.1"
description = "Tom's Enumeration and Exploitation Framework"
repository = "https://github.com/TDiblik/teef"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
edition = "2021"
publish = false

[profile.release]
opt-level = 3
strip = "symbols"
lto = true

[dependencies]
eframe = { version = "0.22.0", features = ["default_fonts"] }
egui_extras = "0.22.0"
egui_dock = "0.6.3"
egui_graphs = "0.7.1"
petgraph = "0.6.3"

log = "0.4.19"
log4rs = "1.2.0"

home = "0.5.5"
anyhow = "1.0.71"
chrono = "0.4.26"
uuid = { version ="1.4.0", features = ["v4", "fast-rng"] }
lazy_static = "1.4.0"
rand = "0.8.5"
crossbeam = "0.8.2"
ipnet = "2.8.0"
local-ip-address = "0.5.3"
pnet = "0.33.0"


[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12" # or whatever is the latest version
